2006-10-21 Carlos Nieves Onega <cnieves@iespana.es>

        * src/a_zoom.c, src/o_arc.c, src/o_basic.c, src/o_box.c,
	  src/o_buffer.c, /src/o_bus.c, src/o_circle.c, src/o_complex.c,
	  src/o_cue.c, src/o_grips.c, /src/o_line.c, src/o_net.c,
	  src/o_picture.c, src/o_pin.c, src/o_select.c, src/o_text.c:
	  Added a new parameter to o_redraw and o_cue_redraw_all, 
	  to choose wether to draw the selected objects or not.
	  Make o_redraw call o_redraw_all_fast, since they shared code.
	
	* src/o_arc.c, src/o_box.c, src/o_bus.c, src/o_circle.c,
	  src/o_cue.c, src/o_grips.c, src/o_line.c, src/o_net.c,
	  src/o_picture.c, src/o_pin.c, src/o_text.c:
	  Don't draw objects if w_current->DONT_REDRAW is 1.
	
	* src/o_text.c: Added some sanity checks in o_text_draw_lowlevel and
	o_text_draw functions. 
	
2006-10-21 Werner Hoch  <werner.ho@gmx.de>

	* po/de_DE.po: Updated German translation

2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_dialog.c, src/x_print.c, src/x_attribedit.c:  Applied patch
	by Patrick Bernaud to Change button order of dialogs to be more
	standard on *nix desktops.

        * configure.ac: Bumped package version to 20061020.

	* lib/system-gschemrc.in: Rearranged the order of the attribute-name
	entries and added some missing attributes.

	* po/*.po, geda-gschem.pot: make distcheck updated all po/port files.

2006-10-20  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* po/fr_FR.po: Updated the French translation.

	* po/*: Updated and merged i18n files for new POTFILES.

	* po/POTFILES.in: Added x_compselect.c to list.

	* src/i_callbacks.c (i_callback_close_wm): Modified prototype to
	match the one expected by GTK and made it stop further propagation
	of the signal to avoid closing the window when user cancels the
	close order. Bug reported by Werner Hoch.

2006-10-20 Carlos Nieves Onega <cnieves@iespana.es>

	* po/es_ES.po: Fixed the header of the spanish translation.
	Thanks to Werner Hoch for pointing it out.
